Update execution counts and save plots in pinv_lidar.ipynb
- Changed execution count for specific code cells to maintain order.
- Added functionality to save histogram and KDE plots as PNG files with specified DPI.

--- a/pinv_lidar.ipynb
+++ b/pinv_lidar.ipynb
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "id": "764cc455",
    "metadata": {},
    "outputs": [
@@ -445,6 +445,8 @@
     "plt.ylabel('Број тачака')\n",
     "plt.tight_layout()\n",
     "plt.grid(True)\n",
+    "plt.savefig(\"results/histogram.png\", dpi=200)\n",
+    "plt.close(fig)\n",
     "plt.show()"
    ]
   },
@@ -477,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "b915e3bc",
    "metadata": {},
    "outputs": [
@@ -499,6 +501,8 @@
     "plt.xlabel('Резидуум [m]')\n",
     "plt.ylabel('Густина')\n",
     "plt.tight_layout()\n",
+    "plt.savefig(\"results/kde.png\", dpi=200)\n",
+    "plt.close(fig)\n",
     "#plt.grid(True)\n",
     "plt.show()"
    ]
